EXTRA_DIST = config.h ecm.sln ecm_gpu.sln file_copy.bat gen_ecm_h.bat \
             getopt.c getopt.h getrusage.c getrusage.h gettimeofday.c \
	     gettimeofday.h mp_lib.props out_copy_rename.bat prebuild.bat \
	     python.bat readme.txt tests.py vacopy.c vsyasm.props \
	     vsyasm.targets vsyasm.xml

DIST_SUBDIRS = assembler ecm ecm_gpu libecm libecm_gpu tune bench_mulredc
