EXTRA_DIST = Makefile.dev README autogen.py bench.c generate_all mulredc1.asm\
	     mulredc10.asm mulredc11.asm mulredc12.asm mulredc13.asm mulredc14.asm\
	     mulredc15.asm mulredc16.asm mulredc17.asm mulredc18.asm mulredc19.asm\
	     mulredc2.asm mulredc20.asm mulredc3.asm mulredc4.asm mulredc5.asm\
	     mulredc6.asm mulredc7.asm mulredc8.asm mulredc9.asm redc.asm test_mulredc.c
